[project]
name = "cerebras-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "logfire[fastapi]>=3.16.0",
    "pydantic>=2.11.4",
    "pydantic-ai>=0.2.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.1",
    "uvicorn>=0.34.2",
]
